# ResearcherAI

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  AGENT_PROOF_WITH_OUTPUTS.md  ARCHITECTURE.md  ARCHITECTURE_EXPLAINED.md  COMPLETE_INTEGRATION_PROOF.md  COMPLETE_SYSTEM_VERIFIED.md  COMPLETION_REPORT.md  Dockerfile  ENHANCED_SYSTEM_SUMMARY.md  FINAL_7_SOURCES_VERIFIED.md  FINAL_STATUS_REPORT.md  FINAL_SUMMARY.md  FULL_SAMPLE_OUTPUTS.md  FULL_SYSTEM_EXPLAINED.md  GIT_GUIDE.md  HONEST_COMPARISON.md  INDEX.md  MEMORY_COMPARISON.md  MULTI_AGENT_GUIDE.md  MULTI_SESSION_GUIDE.md  Makefile  PERSISTENCE_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  RUN_THIS_NOW.md  START_HERE.md  SUCCESS_REPORT.md  SUMMARY.txt  USE_THIS_VERSION.md  VERIFICATION_REPORT.md  api_gateway.py  coverage.xml  demo_end_to_end.py  demo_gemini_live.py  demo_simple.py  (+59 more)
.github/workflows/: ci.yml  coverage.yml  dependency-review.yml  docker.yml  release.yml
agents/: __init__.py  critic_agent.py  data_agent.py  evaluator_agent.py  event_driven_orchestrator.py  graph_agent.py  langgraph_orchestrator.py  llamaindex_rag.py  orchestrator_agent.py  rdf_agent.py  reasoner_agent.py  scheduler_agent.py  summarization_agent.py  vector_agent.py
airflow/: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  setup_airflow.sh
airflow/dags/: research_paper_etl.py  system_monitoring.py
config/: settings.yaml
docs/: 00-frontmatter.md  00a-primer-for-web-developers.md  01-planning.md  02-architecture.md  03-backend.md  04-frontend.md  05-testing.md  06-deployment.md  07-monitoring.md  08-conclusion.md  INTEGRATION_SUMMARY.md  LANGGRAPH_LLAMAINDEX_INTEGRATION.md  QUICK_START_ADVANCED.md  _config.yml  bibliography.md  glossary.md  index.md
docs/_layouts/: default.html
docs/assets/css/: main.css  style.scss  syntax.css
etl_cache/: integration_test_20251025_212251.json  test_output_20251025_204657.json
frontend/: index.html
frontend-react/: fix_imports.sh  package-lock.json  package.json  tailwind.config.js
frontend-react/src/: App.tsx  index.css
frontend-react/src/components/: GlassCard.tsx  README.md  index.ts
frontend-react/src/pages/: Ask.tsx  Collect.tsx  Graph.tsx  Home.tsx  Sessions.tsx  Upload.tsx  Vector.tsx  index.ts
frontend-react/src/services/: api.ts
frontend-react/src/types/: index.ts
frontend/static/css/: styles.css
frontend/static/js/: app.js
k8s/: K8S_DEPLOYMENT_GUIDE.md
k8s/helm/researcherai/: Chart.yaml  README.md  values.yaml
k8s/scripts/: deploy.sh  test-helm-chart.sh  test_k8s_manifests.py
screenshots/: knowledge-graph.ttl
src/: __init__.py  config.py  main.py
src/db/: __init__.py  database.py
src/middleware/: __init__.py  error_handler.py  logging_middleware.py
src/models/: __init__.py  paper.py  query.py  session.py
src/repositories/: __init__.py  paper_repository.py  query_repository.py  session_repository.py
src/routers/: __init__.py  health.py  sessions.py
src/schemas/: __init__.py  collection.py  common.py  graph.py  legacy_schemas.py  query.py  session.py  summarization.py
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/database/: main.tf  outputs.tf  variables.tf
terraform/modules/droplet/: main.tf  outputs.tf  variables.tf
terraform/modules/firewall/: main.tf  outputs.tf  variables.tf
terraform/modules/kafka/: main.tf  outputs.tf  variables.tf
terraform/modules/loadbalancer/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
terraform/scripts/: init_app_server.sh
test_outputs/: 01_collection_result.json  02_neo4j_verification.json  03_qdrant_verification.json  04_qa_results.json  etl_consistency_report.json  etl_neo4j_verification.json  etl_pipeline_summary.json  etl_qdrant_verification.json  etl_source_papers.json
tests/: conftest.py
tests/agents/: conftest.py  test_data_agent.py  test_graph_agent.py  test_reasoner_agent.py  test_scheduler_agent.py  test_vector_agent.py
tests/utils/: test_cache.py  test_circuit_breaker.py  test_model_selector.py  test_token_budget.py
utils/: cache.py  circuit_breaker.py  event_schemas.py  kafka_manager.py  model_selector.py  pdf_parser.py  token_budget.py  vector_visualization.py
(+33 files in other folders)
