[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "researcherai"
version = "2.0.0"
description = "Production-Grade Multi-Agent RAG System for Research Paper Analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ResearcherAI Team"}
]
keywords = ["rag", "multi-agent", "research", "ai", "llm", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "google-generativeai==0.8.3",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    "requests==2.31.0",
    "arxiv==2.1.0",
    "feedparser==6.0.10",
    "duckduckgo-search==4.1.1",
    "huggingface-hub==0.20.2",
    "kaggle==1.5.16",
    "neo4j==5.16.0",
    "qdrant-client==1.7.3",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    "networkx==3.2.1",
    "faiss-cpu==1.7.4",
    "pyvis==0.3.2",
    "plotly==5.18.0",
    "scikit-learn==1.4.0",
    "umap-learn==0.5.5",
    "rdflib==7.3.0",
    "owlrl==6.0.2",
    "SPARQLWrapper==2.0.0",
    "PyPDF2==3.0.1",
    "pandas==2.1.3",
    "numpy==1.26.2",
    "schedule==1.2.0",
    "apscheduler==3.10.4",
    "kafka-python==2.0.2",
    "confluent-kafka==2.3.0",
    "structlog==23.2.0",
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.0.0",
    "langgraph==0.2.45",
    "langchain-core==0.3.15",
    "llama-index==0.12.0",
    "llama-index-embeddings-huggingface==0.4.0",
    "llama-index-vector-stores-qdrant==0.4.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ResearcherAI"
Repository = "https://github.com/yourusername/ResearcherAI"
Documentation = "https://github.com/yourusername/ResearcherAI#readme"
Issues = "https://github.com/yourusername/ResearcherAI/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "venv",
    "tests",
    "migrations"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
